# DeltaGo

./: Makefile  Makefile.am  README.md  config.h.in~  configure  configure.ac
deltagomain/: DeltagoMain.cpp  DeltagoMainEngine.cpp  DeltagoMainEngine.h  Makefile  Makefile.am  deltago
go/: Makefile  Makefile.am
gouct/: Makefile  Makefile.am
gtpengine/: Makefile
mxnet/: MXNetExtract  MXNetMain  MXNetMain.cpp  Makefile  Makefile.am  feature_extract.cpp
mxnet/.deps/: MXNetMain-MXNetMain.Po  MXNetMain.Po
simpleplayers/: Makefile  Makefile.am  SpRandomPlayer.cpp
smartgame/: Makefile  Makefile.am  SimpleMain  SimpleMain.cpp
smartgame/.deps/: SimpleMain.Po  libdeltago_smartgame_a-SgDebug.Po  libdeltago_smartgame_a-SgException.Po  libdeltago_smartgame_a-SgSystem.Po  libdeltago_smartgame_a-SgTime.Po
