noinst_LIBRARIES = libdeltago_go.a

libdeltago_go_a_SOURCES = \
GoPlayerMove.cpp \
GoRules.cpp \
GoKomi.cpp \
GoInit.cpp \
GoRegion.cpp \
GoBoardUtil.cpp \
GoEyeCount.cpp \
GoBlock.cpp \
GoChain.cpp \
GoEyeUtil.cpp \
GoRegionBoard.cpp \
GoRegionUtil.cpp \
GoSafetyUtil.cpp \
GoSafetySolver.cpp \
GoStaticSafetySolver.cpp \
GoGtpEngine.cpp \
GoBook.cpp \
GoAutoBook.cpp \
GoBoardSynchronizer.cpp \
GoGame.cpp \
GoBoardUpdater.cpp \
GoPlayer.cpp \
GoStaticLadder.cpp \
GoBoardRestorer.cpp \
GoGtpCommandUtil.cpp \
GoInfluence.cpp \
GoNodeUtil.cpp \
GoTimeControl.cpp \
GoUtil.cpp \
GoSetupUtil.cpp \
GoGtpExtraCommands.cpp \
GoLadder.cpp \
GoSafetyCommands.cpp \
GoBensonSolver.cpp \
GoBoard.cpp 

noinst_HEADERS = \
GoPlayerMove.h \
GoRules.h \
GoKomi.h \
GoSetup.h \
GoInit.h \
GoRegion.h \
GoBoardUtil.h \
GoEyeCount.h \
GoBlock.h \
GoChain.h \
GoEyeUtil.h \
GoRegionBoard.h \
GoRegionUtil.h \
GoSafetyUtil.h \
GoModBoard.h \
GoAssertBoardRestored.h \
GoMoveExecutor.h \
GoSafetySolver.h \
GoStaticSafetySolver.h \
GoGtpEngine.h \
GoBook.h \
GoAutoBook.h \
GoBoardSynchronizer.h \
GoGame.h \
GoBoardUpdater.h \
GoPlayer.h \
GoStaticLadder.h \
GoBoardRestorer.h \
GoGtpCommandUtil.h \
GoInfluence.h \
GoNodeUtil.h \
GoTimeControl.h \
GoUtil.h \
GoSetupUtil.h \
GoGtpExtraCommands.h \
GoLadder.h \
GoSafetyCommands.h \
GoBensonSolver.h \
GoBoard.h 

libdeltago_go_a_CPPFLAGS = \
$(BOOST_CPPFLAGS) \
-I@top_srcdir@/smartgame \
-I@top_srcdir@/gtpengine


DISTCLEANFILES = *~
